Cache zoo file